--- a/Platform/Windows/VS2012/Molotok/Molotok.vcxproj
+++ b/Platform/Windows/VS2012/Molotok/Molotok.vcxproj
@@ -33,21 +33,21 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v110</PlatformToolset>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v110</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v110</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -146,11 +146,13 @@
     <ClInclude Include="..\..\..\..\Framework\MathLib\Math.h" />
     <ClInclude Include="..\..\..\..\Framework\Framework.h" />
     <ClInclude Include="..\..\..\..\Framework\MathLib\Vector.h" />
+    <ClInclude Include="..\..\..\..\Framework\String.h" />
     <ClInclude Include="..\..\..\Common\ApplicationCommon.h" />
     <ClInclude Include="..\..\..\Common\ApplicationConfig.h" />
     <ClInclude Include="..\..\..\Common\Assert.h" />
     <ClInclude Include="..\..\..\Common\CommonUtils.h" />
     <ClInclude Include="..\..\..\Common\MemoryManager.h" />
+    <ClInclude Include="..\..\..\Common\PlatformEnvironment.h" />
     <ClInclude Include="..\..\Common\PlatformCommon.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
