--- a/Platform/Windows/VS2012/Molotok/Molotok.vcxproj.filters
+++ b/Platform/Windows/VS2012/Molotok/Molotok.vcxproj.filters
@@ -104,5 +104,8 @@
     <ClInclude Include="..\..\..\Common\PlatformEnvironment.h">
       <Filter>Заголовочные файлы\Platform\Common</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\Framework\EnumFlags.h">
+      <Filter>Заголовочные файлы\Framework</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
