--- a/Platform/Windows/VS2012/Molotok/Molotok.vcxproj
+++ b/Platform/Windows/VS2012/Molotok/Molotok.vcxproj
@@ -140,6 +140,8 @@
     <ClCompile Include="..\..\..\..\MainApp\Application.cpp" />
     <ClCompile Include="..\..\..\Common\Assert.cpp" />
     <ClCompile Include="..\..\..\Common\CommonUtils.cpp" />
+    <ClCompile Include="..\..\Common\Win_Log.cpp" />
+    <ClCompile Include="..\..\Common\Win_Timer.cpp" />
     <ClCompile Include="..\..\Common\Win_Assert.cpp" />
     <ClCompile Include="..\..\Common\Win_MemManager.cpp" />
     <ClCompile Include="..\..\Launcher\main.cpp" />
@@ -152,13 +154,17 @@
     <ClInclude Include="..\..\..\..\Framework\Framework.h" />
     <ClInclude Include="..\..\..\..\Framework\MathLib\Vector.h" />
     <ClInclude Include="..\..\..\..\Framework\String.h" />
+    <ClInclude Include="..\..\..\..\MainApp\Application.h" />
     <ClInclude Include="..\..\..\Common\ApplicationCommon.h" />
     <ClInclude Include="..\..\..\Common\ApplicationConfig.h" />
+    <ClInclude Include="..\..\..\Common\ApplicationEvents.h" />
     <ClInclude Include="..\..\..\Common\Assert.h" />
     <ClInclude Include="..\..\..\Common\CommonUtils.h" />
     <ClInclude Include="..\..\..\Common\MemoryManager.h" />
+    <ClInclude Include="..\..\..\Common\OpenGLContext.h" />
     <ClInclude Include="..\..\..\Common\PlatformEnvironment.h" />
     <ClInclude Include="..\..\Common\PlatformCommon.h" />
+    <ClInclude Include="..\..\Common\Win_Timer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
