Event system basics

--- a/Platform/Windows/VS2012/Molotok/Molotok.vcxproj.filters
+++ b/Platform/Windows/VS2012/Molotok/Molotok.vcxproj.filters
@@ -134,5 +134,8 @@
     <ClInclude Include="..\..\Common\Win_OpenGL.h">
       <Filter>Заголовочные файлы\Platform\Windows\Common</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\Common\MouseKeys.h">
+      <Filter>Заголовочные файлы\Framework</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
