--- a/Platform/Windows/VS2012/Molotok/Molotok.vcxproj
+++ b/Platform/Windows/VS2012/Molotok/Molotok.vcxproj
@@ -189,6 +189,7 @@
     <ClCompile Include="..\..\..\..\MainApp\Application.cpp" />
     <ClCompile Include="..\..\..\Common\Assert.cpp" />
     <ClCompile Include="..\..\..\Common\CommonUtils.cpp" />
+    <ClCompile Include="..\..\Common\Win_FileSystemProxy.cpp" />
     <ClCompile Include="..\..\Common\Win_Log.cpp" />
     <ClCompile Include="..\..\Common\Win_OpenGL.cpp" />
     <ClCompile Include="..\..\Common\Win_Timer.cpp" />
@@ -200,6 +201,10 @@
     <ClInclude Include="..\..\..\..\Framework\BasicMacros.h" />
     <ClInclude Include="..\..\..\..\Framework\BasicTypes.h" />
     <ClInclude Include="..\..\..\..\Framework\EnumFlags.h" />
+    <ClInclude Include="..\..\..\..\Framework\GUI\Font_FT2.h" />
+    <ClInclude Include="..\..\..\..\Framework\GUI\XGUI.h" />
+    <ClInclude Include="..\..\..\..\Framework\GUI\XGUI_Common.h" />
+    <ClInclude Include="..\..\..\..\Framework\GUI\XGUI_Font.h" />
     <ClInclude Include="..\..\..\..\Framework\ImageLib\ImageLib.h" />
     <ClInclude Include="..\..\..\..\Framework\ImageLib\Image_Png.h" />
     <ClInclude Include="..\..\..\..\Framework\MathLib\Math.h" />
@@ -229,6 +234,7 @@
     <ClInclude Include="..\..\..\Common\ApplicationEvents.h" />
     <ClInclude Include="..\..\..\Common\Assert.h" />
     <ClInclude Include="..\..\..\Common\CommonUtils.h" />
+    <ClInclude Include="..\..\..\Common\FileSystemProxy.h" />
     <ClInclude Include="..\..\..\Common\MemoryManager.h" />
     <ClInclude Include="..\..\..\Common\MouseKeys.h" />
     <ClInclude Include="..\..\..\Common\OpenGLContext.h" />
