--- a/Platform/Windows/VS2012/Molotok/Molotok.vcxproj.filters
+++ b/Platform/Windows/VS2012/Molotok/Molotok.vcxproj.filters
@@ -67,7 +67,7 @@
     <Filter Include="Заголовочные файлы\Framework\GUI">
       <UniqueIdentifier>{3df0489d-361d-44c5-9dcf-2d8ed06e3139}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Файлы исходного кода\Framework\ImageLib\GUI">
+    <Filter Include="Файлы исходного кода\Framework\GUI">
       <UniqueIdentifier>{3bff4c1e-a302-4802-ad92-8449640d2d59}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -190,7 +190,10 @@
       <Filter>Файлы исходного кода\Platform\Windows</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\..\Framework\GUI\XGUI_Font.cpp">
-      <Filter>Файлы исходного кода\Framework\ImageLib\GUI</Filter>
+      <Filter>Файлы исходного кода\Framework\GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\Framework\GUI\XGUI_Sheet.cpp">
+      <Filter>Файлы исходного кода\Framework\GUI</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -324,6 +327,12 @@
       <Filter>Заголовочные файлы\Framework\GUI</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\Framework\GUI\XGUI.h">
+      <Filter>Заголовочные файлы\Framework\GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\Framework\GUI\GUISheet.h">
+      <Filter>Заголовочные файлы\Framework\GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\Framework\GUI\XGUI_Sheet.h">
       <Filter>Заголовочные файлы\Framework\GUI</Filter>
     </ClInclude>
   </ItemGroup>
