--- a/Platform/Windows/VS2012/Molotok/Molotok.vcxproj
+++ b/Platform/Windows/VS2012/Molotok/Molotok.vcxproj
@@ -157,10 +157,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\Framework\GUI\XGUI_Button.cpp" />
     <ClCompile Include="..\..\..\..\Framework\GUI\XGUI_Font.cpp" />
+    <ClCompile Include="..\..\..\..\Framework\GUI\XGUI_Manager.cpp" />
     <ClCompile Include="..\..\..\..\Framework\GUI\XGUI_Sheet.cpp" />
+    <ClCompile Include="..\..\..\..\Framework\GUI\XGUI_Widget.cpp" />
     <ClCompile Include="..\..\..\..\Framework\ImageLib\ImageLib.cpp" />
     <ClCompile Include="..\..\..\..\Framework\ImageLib\Image_Png.cpp" />
+    <ClCompile Include="..\..\..\..\Framework\OpenGLBackend.cpp" />
     <ClCompile Include="..\..\..\..\Libs\libpng\png.c" />
     <ClCompile Include="..\..\..\..\Libs\libpng\pngerror.c" />
     <ClCompile Include="..\..\..\..\Libs\libpng\pngget.c" />
@@ -205,15 +209,20 @@
     <ClInclude Include="..\..\..\..\Framework\EnumFlags.h" />
     <ClInclude Include="..\..\..\..\Framework\GUI\Font_FT2.h" />
     <ClInclude Include="..\..\..\..\Framework\GUI\XGUI.h" />
+    <ClInclude Include="..\..\..\..\Framework\GUI\XGUI_Button.h" />
     <ClInclude Include="..\..\..\..\Framework\GUI\XGUI_Common.h" />
+    <ClInclude Include="..\..\..\..\Framework\GUI\XGUI_Const.h" />
     <ClInclude Include="..\..\..\..\Framework\GUI\XGUI_Font.h" />
     <ClInclude Include="..\..\..\..\Framework\GUI\GUISheet.h" />
+    <ClInclude Include="..\..\..\..\Framework\GUI\XGUI_Manager.h" />
     <ClInclude Include="..\..\..\..\Framework\GUI\XGUI_Sheet.h" />
+    <ClInclude Include="..\..\..\..\Framework\GUI\XGUI_Widget.h" />
     <ClInclude Include="..\..\..\..\Framework\ImageLib\ImageLib.h" />
     <ClInclude Include="..\..\..\..\Framework\ImageLib\Image_Png.h" />
     <ClInclude Include="..\..\..\..\Framework\MathLib\Math.h" />
     <ClInclude Include="..\..\..\..\Framework\Framework.h" />
     <ClInclude Include="..\..\..\..\Framework\MathLib\Vector.h" />
+    <ClInclude Include="..\..\..\..\Framework\OpenGLBackend.h" />
     <ClInclude Include="..\..\..\..\Framework\String.h" />
     <ClInclude Include="..\..\..\..\Libs\libpng\png.h" />
     <ClInclude Include="..\..\..\..\Libs\libpng\pngconf.h" />
